ispCP ω 1.0.0 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~~

2008-06-17 Benedikt Heintel
	- GUI:
		* Fixed #1231: Session conflict / redirection problem
		* Fixed #1277: Adding CHECK_FOR_UPDATES in ispcp.conf
		* Fixed #1351: Filemanager not work update RC4 -> RC5
		* Fixed #1353: In admin/ispcp_debugger.php not all execute request are counted
		* Fixed #1354: Disabled forward list when editing mixed mail address

2008-06-15 Benedikt Heintel
	- CONFIGS:
		* Added maximum e-mail size
	- ENGINE:
		* Fix for RC5 update
	- LANGUAGES:
		* Updated Romanian
		* Updated all language files

2008-06-14 Benedikt Heintel
	- RELEASE ispCP ω Omega 1.0.0 RC5
	- GUI:
		* Fixed #1344: Error with LocalPart address checking
	- ENGINE:
		* Fixed: Update Script
	- LANGUAGE:
		* Updated Catalan

2008-06-13 Benedikt Heintel
	- DATABASES:
		* Fixed 1346: client mysql password length
	- ENGINE:
		* Fixed #1215: POP/IMAP traffic is not added in domain statistics with courier and fedora core 8
		* Fixed #1345: Bug in mail log collection (ispcp-vrl-traff)

2008-06-12 Benedikt Heintel
	- GUI:
		* Fixed #1340: when a new ticket is created mail to admin contain encoded strings
	- LANGUAGES:
		* Added Basque
		* Updated Catalan
	- TOOLS:
		* Fixed #923: Open basedir errors with filemanager. Anyone else has the same error?
		* Fixed #1339: Webmail layout broken (once again)

2008-06-06 Jochen Manz
	- CONFIGS:
		* Fixed #1337: freebsd ispcp.conf ajustment agains dev new ispcp.conf
	- GUI:
		* Fixed #1336: some better web accessability - (Part 3); and some more
	- LANGUAGES:
		* Fixed #1335: tiny german language file update (patch included)

2008-06-04 Benedikt Heintel
	- DISTS:
		* Fixed #1333: (Gentoo) Missing files, directories (/etc/ispcp/apache/), Gentoo

2008-06-04 Jochen Manz
	- GUI:
		* Fixed #1331: unknown column 'mail_auto_respond_text' in 'field list'

2008-06-03 Benedikt Heintel
	- TOOLS:
		* Updated net2ftp to version 0.97
		* Updates SquirrelMail to version 1.4.15

2008-06-03 Benedikt Heintel